--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- 搜索框容器 -->
+    <color name="search_box_bg">#F5F5F5</color>
+    <color name="search_box_stroke">#E0E0E0</color>
+    <color name="search_box_hint">#9E9E9E</color>
 </resources>
